--- a/config/mongo.yml
+++ b/config/mongo.yml
@@ -1,15 +1,12 @@
-defaults: &defaults
-  host: 127.0.0.1
-  port: 27017
-
 development:
-  <<: *defaults
-  database: "#myapp-#{Rails.env}"
+  adapter: MongoDB
+  host: localhost
+  database: "#myapp-development"
 
 test:
-  <<: *defaults
-  database: "#myapp-#{Rails.env}"
+  adapter: MongoDB
+  host: localhost
+  database: "#myapp-development"
 
-# set these environment variables on your prod server
 production:
-  uri: <%= ENV['MONGOHQ_URL'] %>
+  uri: mongodb://admin:123456@linus.mongohq.com:10042/app13390540
